# protobuf_demo

./: CMakeLists.txt  main.cpp  readme.md  reflect_demo.cpp  serialize_demo.cpp
common/: CMakeLists.txt  ClassInfo.pb.cc  ClassInfo.pb.h  ClassInfo.proto  ClassOperator.cpp  ClassOperator.h  complie_proto.sh
reflect/: CMakeLists.txt  reflect.cpp  reflect.h
serialize/: CMakeLists.txt  serialize.cpp  serialize.h
